<resources>
    <string name="app_name">Rime Android</string>
    <string name="deploy_button">部署</string>
    <string name="grant_permission_request_toast">请同意权限</string>
    <string name="deploying_dialog_title">正在部署</string>
    <string name="deploy_success_dialog">部署成功</string>
    <string name="deploy_failure_dialog">有错误发生</string>
    <string name="done_button">完成</string>
    <string name="rime_user_data_dir">用户数据目录</string>
    <string name="rime_shared_data_dir">共享数据目录</string>
    <string name="deploy_failure_toast">部署有错误发生</string>
    <string name="session_preparing_preedit_hint">准备中</string>
    <string name="settings_label">设置</string>
    <string name="input_test_label">测试</string>
    <string name="candidates_font_file_hint">候选字体文件</string>
    <string name="invalid_font_toast">无效字体</string>
    <string name="key_input_et_hint">按键输入</string>
    <string name="please_grant_permission">请同意权限</string>
    <string name="settings_show_composing">文本中显示输入码</string>
    <string name="settings_hide_candidates">隐藏候选（盲打模式）</string>
</resources>
